--- a/Demo/Views/Students/MyCart.cshtml
+++ b/Demo/Views/Students/MyCart.cshtml
@@ -158,8 +158,8 @@
                         <i class="fas fa-shopping-cart"></i>
                         <h3 class="mb-3">Your cart is empty</h3>
                         <p class="mb-4">Start learning today by adding courses to your cart!</p>
-                        <a href="#" class="btn browse-btn">
-                            <i class="fas fa-search me-2"></i>Browse Courses
+                        <a href="/Students/StudentCourses" class="btn browse-btn">
+                            <i class="fas fa-search me-2" style="font-size:15px;"></i>Browse Courses
                         </a>
                     </div>
                 }
