Review done at student and admin panel

--- a/Demo/Views/Courses/Dashboard.cshtml
+++ b/Demo/Views/Courses/Dashboard.cshtml
@@ -460,10 +460,13 @@
 					</a>
 				</li>
 				<li>
+					<a href="/Courses/Reviews" class="menu-link" style="text-decoration:none;color:inherit;">
+
 					<div class="menu-item">
 						<span class="menu-icon">📜</span>
-						<span>Reports</span>
+						<span>Reviews</span>
 					</div>
+					</a>
 				</li>
 				<li>
 					<div class="menu-item">
