--- a/Demo/Views/Courses/PaymentList.cshtml
+++ b/Demo/Views/Courses/PaymentList.cshtml
@@ -464,10 +464,13 @@
 				</a>
 			</li>
 			<li>
-				<div class="menu-item">
-					<span class="menu-icon">📜</span>
-					<span>Reports</span>
-				</div>
+				<a href="/Courses/Reviews" class="menu-link" style="text-decoration:none;color:inherit;">
+
+					<div class="menu-item">
+						<span class="menu-icon">📜</span>
+						<span>Reviews</span>
+					</div>
+				</a>
 			</li>
 			<li>
 				<div class="menu-item">
