--- a/Demo/Views/Students/AddCourse.cshtml
+++ b/Demo/Views/Students/AddCourse.cshtml
@@ -387,10 +387,13 @@
                     </div>
             </li>
             <li>
-                <div class="menu-item">
-                    <span class="menu-icon">📜</span>
-                    <span>Reports</span>
-                </div>
+                <a href="/Courses/Reviews" class="menu-link" style="text-decoration:none;color:inherit;">
+
+                    <div class="menu-item">
+                        <span class="menu-icon">📜</span>
+                        <span>Reviews</span>
+                    </div>
+                </a>
             </li>
             <li>
                 <div class="menu-item">
